# veille_qualiopi

./: .gitattributes  .gitignore  README.md  dashboard.html  db_conn.php  index.php  pyproject.toml  run_pipeline.py
.github/workflows/: rss-generateur.yml
docs/: aggregate.py  dashboard.html  index.html  sources.py
docs/admin/: sources.html
docs/assets/css/: admin-pipeline.css  admin.css  components.css  layout.css  theme.css
docs/assets/css0/: admin.css  admin0.css  base.css  components.css  header.css  layout.css  legal.css  legal0.css  nav.css  style.css  style0.css
docs/legal/: admin-legal.html  legal.html
docs/pages/: admin-home.php  admin-logs-content.php  admin-logs.php  admin-pipeline-content.php  admin-pipeline.php  admin-sections-content.php  admin-sections.php  admin-sources-content.php  admin-sources.php  index-content.php  index.php  legal-content.php  legal.php
docs/templates/: base.php  components-legal.php  components.php  head.php  scripts.php
docs/xml/: .htaccess  activity.php  activity_history.jsonl  flux.php  flux_legal.xml  flux_pedago.xml  last_update.json  last_update.php  latest_articles.php  rss.php  rss_centre-inffo_fr.xml  rss_cosmos.xml  rss_digiforma-veille_com.xml  rss_digiforma_com.xml  rss_eduscol_education_fr.xml  rss_final.xml  rss_plongez_fr.xml  sources.json  sources.php  update_history.php
scripts/: Import_sources.php  import_activity.php  import_articles.php
src/rss_qualiopi/: aggregate.py  db.py  diff.py  export_csv.py  import_rss_to_db.py  json_logger.py  main.py  rss_generator.py  scraper.py
tests/: test_rss.py
(+21 files in other folders)
